--- a/templates/home.html
+++ b/templates/home.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <div class="container">
-        <h2>hello there! Add Items to Your Grocery Cart</h2>
+        <h2>hello there!kindly Add Items to Your Grocery Cart</h2>
         <form method="post">
             <input name="item" placeholder="Item name" required><br>
             <input type="number" name="quantity" placeholder="Quantity" required><br>
